# AMLGentex

./: .gitignore  CLAUDE.md  COVERAGE_PLAN.md  README.md  pyproject.toml  tutorial.ipynb
.github/workflows/: tests.yml
.mcp/: memory.sqlite
10K_accts/: config.yaml
10K_accts/data/param_files/: conf.json
assets/images/: README.md
experiments/: README.md
experiments/template_experiment/config/: accounts.csv  alertPatterns.csv  data.yaml  models.yaml  normalModels.csv  preprocessing.yaml
experiments/tutorial_demo/config/: accounts.csv  data.yaml  degree.csv  models.yaml  (+2 more)
flib/clients/: clients.py
flib/models/: models.py
flib/train/: tune_hyperparams.py
flib/tune/: optimizer.py  tuner.py
scripts/: README.md  generate.py  increasing_clients.py  plot.py  preprocess.py  train.py  tune_data.py  tune_hyperparams.py  visualize_data.py  visualize_features.py
scripts/simulations/: README.md  changing_overlap.py  decreasing_n_labels.py  increasing_clients.py
src/data_creation/: README.md  __init__.py  generator.py  run_simulation.py
src/data_tuning/: README.md  __init__.py  optimizer.py  tuner.py
src/feature_engineering/: README.md  __init__.py  noise.py  preprocessor.py  summary.py
src/ml/: README.md  __init__.py
src/utils/: __init__.py  config.py  logging.py  pattern_types.py  utils.py
src/visualize/: __init__.py  data.py  features.py  plot.py  utils.py
tests/data_creation/: README.md  conftest.py
tests/data_tuning/: conftest.py  test_optimizer.py  test_tuner.py
tests/feature_engineering/: conftest.py  test_apply_train_noise.py  test_noise.py  test_preprocessor.py  test_summary.py  test_transductive_inductive.py
tests/utils/: test_config.py  test_utils.py
(+89 files in other folders)
